--- a/src/pages/Home/components/Join/styles.module.scss
+++ b/src/pages/Home/components/Join/styles.module.scss
@@ -2,6 +2,7 @@
     background-image: url("https://www.themoviedb.org/t/p/w1920_and_h800_multi_faces_filter(duotone,190235,ad47dd)/lMnoYqPIAVL0YaLP5YjRy7iwaYv.jpg");
     background-position: center;
     background-size: cover;
+    background-repeat: no-repeat;
     padding: 30px;
     
     > h2 {
@@ -13,13 +14,16 @@
     > section {
         display: flex;
         justify-content: space-between;
+        flex-wrap: wrap;
         margin: 20px 0;
 
         > div {
+            margin-right: 20px;
+
             > p {
                 color: white;
                 font-size: 19px;
-                width: 721px;
+                max-width: 721px;
 
                 > em {
                     opacity: 0.7;
@@ -44,6 +48,16 @@
             > li {
                 color: white;
                 opacity: 0.8;
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 1285px) {
+    .join {
+        > section {
+            > ul {
+                margin: 20px 0 0 20px;
             }
         }
     }
