--- a/src/components/CategorySwitch/styles.module.scss
+++ b/src/components/CategorySwitch/styles.module.scss
@@ -1,6 +1,7 @@
 .category-switch {
     display: flex;
     align-items: center;
+    flex-wrap: wrap;
 
     > h2 {
         font-weight: 600;
@@ -13,6 +14,7 @@
         align-items: center;
         border: 1px solid rgba(3, 37, 65, 1);
         border-radius: 30px;
+        flex-wrap: wrap;
 
         > li {
             list-style: none;
@@ -21,6 +23,10 @@
             color: rgba(3, 37, 65, 1);
             font-weight: 600;
             cursor: pointer;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            align-self: stretch;
 
             &.active-category {
                 background-color: rgba(3, 37, 65, 1);
@@ -32,7 +38,6 @@
     }
 
     &--secondary {
-
         > h2 {
             color: white;
         }
@@ -48,6 +53,16 @@
                     color: rgba(3, 37, 65, 1);
                 }
             }
+        }
+    }
+}
+
+@media only screen and (max-width: 500px) {
+    .category-switch {
+        flex-direction: column;
+
+        > h2 {
+            margin: 0 0 5px 0;
         }
     }
 }
