--- a/src/pages/Home/components/FreeToWatch/styles.module.scss
+++ b/src/pages/Home/components/FreeToWatch/styles.module.scss
@@ -1,3 +1,9 @@
 .free-to-watch {
     padding: 30px 0 0 30px;
 }
+
+@media only screen and (max-width: 500px) {
+    .free-to-watch {
+        padding: 30px 20px 0 20px;
+    }
+}
