--- a/src/components/Modal/styles.module.scss
+++ b/src/components/Modal/styles.module.scss
@@ -6,8 +6,22 @@
     bottom: 0;
     background-color: #00000073;
     z-index: 2;
+    animation-name: modal-appear;
+    animation-duration: 0.5s;
+    animation-timing-function: ease;
+    animation-iteration-count: 1;
 }
 
 .hidden-body {
     overflow: hidden;
+}
+
+@keyframes modal-appear {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
 }
