add useQuery custom hook

--- a/src/pages/Home/components/Join/styles.module.scss
+++ b/src/pages/Home/components/Join/styles.module.scss
@@ -4,6 +4,7 @@
     background-size: cover;
     background-repeat: no-repeat;
     padding: 30px;
+    margin-bottom: 30px;
     
     > h2 {
         font-size: 32px;
