--- a/src/pages/Home/components/Trailers/styles.module.scss
+++ b/src/pages/Home/components/Trailers/styles.module.scss
@@ -1,6 +1,6 @@
 .trailers {
-    background-position: center center;
     padding: 30px 0 0 30px;
+    background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
     
@@ -24,18 +24,6 @@
             width: 300px;
             margin: 0 10px;
             flex-shrink: 0;
-            cursor: pointer;
-
-            &:hover {
-                > div {
-                    transition-duration: 0.5s;
-                    transform: scale(1.1);
-
-                    > img:last-child {
-                        transform: scale(1.1);
-                    }
-                }
-            }
 
             &:first-child {
                 margin-left: 0;
@@ -47,6 +35,16 @@
 
             > div {
                 position: relative;
+                transition: transform 0.2s ease-in-out;
+                cursor: pointer;
+
+                &:hover {
+                    transform: scale(1.06);
+    
+                    > img:last-child {
+                        transform: scale(1.3);
+                    }
+                }
 
                 > img:first-child {
                     width: 100%;
@@ -62,14 +60,18 @@
                     position: absolute;
                     top: calc(50% - 80px);
                     left: calc(50% - 80px);
+                    transition: transform 0.2s ease-in-out;
                 }
             }
 
-            > h2 {
-                color: white;
-                font-size: 19px;
-                font-weight: 600;
-                margin-top: 10px;
+            > a {
+                > h2 {
+                    color: white;
+                    font-size: 19px;
+                    font-weight: 600;
+                    margin-top: 10px;
+                    cursor: pointer;
+                }
             }
 
             > h3 {
