--- a/src/pages/Home/components/Trending/styles.module.scss
+++ b/src/pages/Home/components/Trending/styles.module.scss
@@ -1,13 +1,8 @@
 .trending {
     padding: 30px 0 0 30px;
-    position: relative;
-
-    > img {
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        z-index: -1;
-    }
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: 50% 200px;
 }
 
 @media only screen and (max-width: 500px) {
