--- a/src/components/Footer/styles.module.scss
+++ b/src/components/Footer/styles.module.scss
@@ -17,15 +17,14 @@
             margin-bottom: 40px;
         }
 
-        > button {
+        > a {
+            text-decoration: none;
             color: rgba(1, 180, 228, 1);
             background-color: white;
             font-size: 18px;
             font-weight: bold;
-            border: 2px solid white;
             border-radius: 5px;
-            padding: 8px 16px;
-            cursor: pointer;
+            padding: 10px 16px;
         }
     }
 
