--- a/src/pages/Home/components/Join/styles.module.scss
+++ b/src/pages/Home/components/Join/styles.module.scss
@@ -25,22 +25,22 @@
                 color: white;
                 font-size: 19px;
                 max-width: 721px;
+                margin-bottom: 35px;
 
                 > em {
                     opacity: 0.7;
                 }
             }
 
-            > button {
+            > a {
+                text-decoration: none;
                 background-color: #805be7;
                 border-radius: 5px;
                 color: white;
                 font-size: 17px;
                 padding: 12px 18px;
                 font-weight: 600;
-                border: none;
                 margin-top: 20px;
-                cursor: pointer;
             }
         }
 
